Fix double extension of the update rect when flattening transform masks

BUG:463788